--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: jUnitVersion
 
     //for pdf file usage
-    implementation 'org.apache.pdfbox:pdfbox:2.0.17'
+    implementation group: 'com.itextpdf', name: 'itext7-core', version: '7.1.8'
 }
 
 shadowJar {
